--- a/Symptoms_Project-master/assets/styles/main.scss
+++ b/Symptoms_Project-master/assets/styles/main.scss
@@ -437,7 +437,7 @@ button{
 #tendril{
   margin:0 !important;
   margin-left:100px !important;
-  height:28%;
+  // height:28%;
   display:grid;
   
   
